# vidoxide

./: .gitmodules  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  build.rs
src/: args.rs  config.rs  controller.rs  device_connection.rs  guiding.rs  lim_freq_action.rs  main.rs  timer.rs  tracking.rs
src/camera/: mod.rs
src/camera/drivers/: asi.rs  flycapture2.rs  iidc.rs  mod.rs  simulator.rs  spinnaker.rs  v4l2.rs
src/devices/: mod.rs  utils.rs
src/devices/focuser/: dream_focuser_mini.rs  focuscube3.rs  mod.rs  simulator.rs
src/devices/focuser/dream_focuser_mini/: dfmini_bluetooth.rs  dfmini_usb.rs  mod.rs
src/focuser/: dream_focuser_mini.rs  mod.rs
src/gui/: actions.rs  basic_connection_controls.rs  camera_gui.rs  checked_listbox.rs  controller.rs  dec_intervals.rs  device_connection_dialog.rs  dispersion_dialog.rs  event_handlers.rs  freezeable.rs  gamma_dialog.rs  histogram_utils.rs  histogram_view.rs  img_view.rs  info_overlay.rs  initialization.rs  mod.rs  non_signaling.rs  preview_processing.rs  psf_dialog.rs  reticle_dialog.rs  roi_dialog.rs  script_dialog.rs
src/gui/focuser_gui/: connection_dialog.rs  dream_focuser_mini.rs  focuscube3.rs  mod.rs  simulator.rs
src/gui/mount_gui/: ascom.rs  connection_dialog.rs  ioptron.rs  mod.rs  simulator.rs  skywatcher.rs  zwo.rs
src/gui/rec_gui/: mod.rs  time_widget.rs
src/input/: image_list.rs  mod.rs  ser.rs
src/mount/: ascom.rs  ioptron.rs  mod.rs  simulator.rs  skywatcher.rs  zwo.rs
src/output/: file_seq.rs  mod.rs  ser.rs
src/resources/: mod.rs
src/scripting/: mod.rs
src/workers/: capture.rs  controller.rs  histogram.rs  mod.rs  recording.rs  script.rs
