[package]
name = "vidoxide"
version = "0.1.0"
authors = ["Filip Szczerek <ga.software@yahoo.com>"]
edition = "2018"

[features]
default = ["controller"]

camera_asi = ["libasicamera-sys"]
camera_flycap2 = ["libflycapture2-sys"]
camera_iidc = ["libdc1394-sys"]
camera_v4l2 = ["ioctl-rs", "mmap", "v4l2-sys"]
camera_spinnaker = ["libspinnaker-sys"]

mount_ascom = ["com", "uuid", "winapi"]

controller = ["stick", "pasts"]

[dependencies]
atomic_float = "0.1.0"
cgmath = "0.18.0"
chrono = "0.4.12"
com = { version = "0.3.0", optional = true }
crossbeam = "0.8.2"
dirs = "5.0.1"
enum_dispatch = "0.3.7"
ga_image = { path = "ext/ga_image" }
glib = "0.14.2"
gtk = "0.14.0"
log = "0.4.20"
ioctl-rs = { version = "0.2.0", optional = true }
libasicamera-sys = { path = "../libasicamera-sys", optional = true }
libdc1394-sys = { version = "0.2.2", optional = true }
libflycapture2-sys = { version = "0.1.1", optional = true }
libspinnaker-sys = { version = "0.1.0", optional = true }
mmap = { version = "0.1.1", optional = true }
num-traits = "0.2.12"
os_info = "3.0"
pasts = { version = "0.8", optional = true }
serialport = "4.2.0"
simplelog = "0.12.1"
# Needed until https://github.com/ardaku/stick/pull/38 is merged to upstream repo.
stick = { git = "https://github.com/GreatAttractor/stick.git", rev = "6269405a7d6d812b7497715b843a822a4d3f6dcd", optional = true }
strum = "0.18.0"
strum_macros = "0.18.0"
time = "0.3.30" # why needed explicitly? simplelog's use not enough?
uuid = { version = "0.8", optional = true }
v4l2-sys = { version = "1.1.0", optional = true }

[dependencies.winapi]
version = "0.3.9"
features = [
    "combaseapi",
    "objbase",
    "winerror",
    "wtypesbase",
    "oleauto",
    "impl-default"
]
optional = true
